Merging in changes from KFS 3.0.1 branch